fix table header alignment

--- a/assignments/assignment03.css
+++ b/assignments/assignment03.css
@@ -1,2 +1,3 @@
 /* center-align table columns */
-th, td {text-align: center;} 
+td {text-align: center;} 
+th {text-align: center;}
